; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/au88x0/extr_au88x0_core.c_vortex_srcblock_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/au88x0/extr_au88x0_core.c_vortex_srcblock_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@VORTEX_SRC_SOURCESIZE = common dso_local global i64 0, align 8
@VORTEX_SRC_RTBASE = common dso_local global i64 0, align 8
@VORTEX_SRC_CHNBASE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @vortex_srcblock_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vortex_srcblock_init(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i64, i64* @VORTEX_SRC_SOURCESIZE, align 8
  %9 = call i32 @hwwrite(i32 %7, i64 %8, i32 511)
  %10 = load i64, i64* @VORTEX_SRC_RTBASE, align 8
  %11 = add nsw i64 %10, 60
  store i64 %11, i64* %3, align 8
  store i32 15, i32* %4, align 4
  br label %12

12:                                               ; preds = %23, %1
  %13 = load i32, i32* %4, align 4
  %14 = icmp sge i32 %13, 0
  br i1 %14, label %15, label %26

15:                                               ; preds = %12
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i64, i64* %3, align 8
  %20 = call i32 @hwwrite(i32 %18, i64 %19, i32 0)
  %21 = load i64, i64* %3, align 8
  %22 = sub nsw i64 %21, 4
  store i64 %22, i64* %3, align 8
  br label %23

23:                                               ; preds = %15
  %24 = load i32, i32* %4, align 4
  %25 = add nsw i32 %24, -1
  store i32 %25, i32* %4, align 4
  br label %12

26:                                               ; preds = %12
  %27 = load i64, i64* @VORTEX_SRC_CHNBASE, align 8
  %28 = add nsw i64 %27, 84
  store i64 %28, i64* %3, align 8
  store i32 21, i32* %4, align 4
  br label %29

29:                                               ; preds = %40, %26
  %30 = load i32, i32* %4, align 4
  %31 = icmp sge i32 %30, 0
  br i1 %31, label %32, label %43

32:                                               ; preds = %29
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = load i64, i64* %3, align 8
  %37 = call i32 @hwwrite(i32 %35, i64 %36, i32 0)
  %38 = load i64, i64* %3, align 8
  %39 = sub nsw i64 %38, 4
  store i64 %39, i64* %3, align 8
  br label %40

40:                                               ; preds = %32
  %41 = load i32, i32* %4, align 4
  %42 = add nsw i32 %41, -1
  store i32 %42, i32* %4, align 4
  br label %29

43:                                               ; preds = %29
  ret void
}

declare dso_local i32 @hwwrite(i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
